[gd_scene load_steps=46 format=3 uid="uid://cq7jfqid4pjt2"]

[ext_resource type="Texture2D" uid="uid://bj04vntg64lw5" path="res://icon.svg" id="1_0lk6c"]
[ext_resource type="Script" path="res://character_body_2d.gd" id="1_lfuix"]
[ext_resource type="Script" path="res://new_script.gd" id="2_0odp4"]
[ext_resource type="Texture2D" uid="uid://ct77hsl52qxgb" path="res://551cc3fd67aeaaf (1).png" id="3_jcc0i"]
[ext_resource type="Script" path="res://playerCollision.gd" id="4_2y4d7"]
[ext_resource type="Script" path="res://slime_2_2d.gd" id="4_tgr73"]
[ext_resource type="Script" path="res://animation_script.gd" id="5_gk6m3"]
[ext_resource type="Script" path="res://big_slime.gd" id="7_v2y33"]
[ext_resource type="Script" path="res://slime_input_delay.gd" id="8_jm5xw"]
[ext_resource type="Script" path="res://slime_merge_delay.gd" id="10_ud7et"]
[ext_resource type="Script" path="res://player_3_body.gd" id="11_dxnox"]
[ext_resource type="Script" path="res://player_4_body.gd" id="13_ysa2l"]
[ext_resource type="Script" path="res://merging_engine.gd" id="14_p8mhi"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_by6cd"]

[sub_resource type="Animation" id="Animation_frcoi"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_snefw"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_q1n6k"]
resource_name = "running-loop"
length = 0.45
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 3, 4]
}

[sub_resource type="Animation" id="Animation_udype"]
resource_name = "start_running"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_s1nu8"]
resource_name = "stop_running"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 2, 1, 0]
}

[sub_resource type="Animation" id="Animation_7d5ql"]
resource_name = "stop_upward"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(12, 0), Vector2i(11, 0), Vector2i(10, 0)]
}

[sub_resource type="Animation" id="Animation_jo3wt"]
resource_name = "upward"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(13, 0), Vector2i(14, 0)]
}

[sub_resource type="Animation" id="Animation_hxkon"]
resource_name = "downward"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 9]
}

[sub_resource type="Animation" id="Animation_qgsfa"]
resource_name = "start_downward"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [5, 6, 7]
}

[sub_resource type="Animation" id="Animation_yhe6j"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 18, 19]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4c86s"]
_data = {
"RESET": SubResource("Animation_frcoi"),
"death": SubResource("Animation_yhe6j"),
"downward": SubResource("Animation_hxkon"),
"idle": SubResource("Animation_snefw"),
"running-loop": SubResource("Animation_q1n6k"),
"start_downward": SubResource("Animation_qgsfa"),
"start_running": SubResource("Animation_udype"),
"stop_running": SubResource("Animation_s1nu8"),
"stop_upward": SubResource("Animation_7d5ql"),
"upward": SubResource("Animation_jo3wt")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ih3nk"]
radius = 9.0
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hp2pg"]
radius = 9.0
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ryuhe"]
radius = 9.0
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hvbhm"]
radius = 9.0
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bf3ur"]
radius = 9.0
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_316au"]
radius = 9.0
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ib5w4"]
radius = 9.0
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_56sp4"]
radius = 9.0
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hoo6n"]
radius = 9.0
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_24drl"]
radius = 9.0
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_l4ncp"]
radius = 9.0
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3hv8s"]
radius = 9.0
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xlkgu"]
radius = 9.0
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m7t5i"]
radius = 9.0
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_44bpf"]
radius = 9.0
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8ptc2"]
radius = 9.0
height = 19.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wy72w"]
size = Vector2(38, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_175ee"]
size = Vector2(38, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xfh7o"]
size = Vector2(38, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_budch"]
size = Vector2(432, 243)

[node name="Players" type="Node2D"]
physics_interpolation_mode = 1
position = Vector2(13, -114)

[node name="CharacterBody2D2" type="CharacterBody2D" parent="."]
physics_interpolation_mode = 1
position = Vector2(50, 200)
collision_layer = 2
script = ExtResource("1_lfuix")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D2"]
physics_interpolation_mode = 1
material = SubResource("CanvasItemMaterial_by6cd")
texture = ExtResource("3_jcc0i")
hframes = 21
script = ExtResource("2_0odp4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterBody2D2"]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_4c86s")
}
autoplay = "idle"
script = ExtResource("5_gk6m3")

[node name="1" type="Area2D" parent="CharacterBody2D2"]
collision_layer = 32768
collision_mask = 32768
script = ExtResource("4_2y4d7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D2/1"]
shape = SubResource("CapsuleShape2D_ih3nk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D2"]
shape = SubResource("CapsuleShape2D_hp2pg")

[node name="damageArea" type="Area2D" parent="CharacterBody2D2"]
collision_layer = 0
collision_mask = 16384

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D2/damageArea"]
shape = SubResource("CapsuleShape2D_ryuhe")

[node name="springArea" type="Area2D" parent="CharacterBody2D2"]
collision_layer = 8192
collision_mask = 8192

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D2/springArea"]
shape = SubResource("CapsuleShape2D_hvbhm")

[node name="CharacterBody2D3" type="CharacterBody2D" parent="."]
physics_interpolation_mode = 1
position = Vector2(90, 200)
collision_layer = 2
script = ExtResource("11_dxnox")

[node name="Sprite2D3" type="Sprite2D" parent="CharacterBody2D3"]
physics_interpolation_mode = 1
material = SubResource("CanvasItemMaterial_by6cd")
texture = ExtResource("3_jcc0i")
hframes = 21
script = ExtResource("2_0odp4")

[node name="AnimationPlayer3" type="AnimationPlayer" parent="CharacterBody2D3"]
root_node = NodePath("../Sprite2D3")
libraries = {
"": SubResource("AnimationLibrary_4c86s")
}
autoplay = "idle"
script = ExtResource("5_gk6m3")

[node name="3" type="Area2D" parent="CharacterBody2D3"]
collision_layer = 32768
collision_mask = 32768
script = ExtResource("4_2y4d7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D3/3"]
shape = SubResource("CapsuleShape2D_bf3ur")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D3"]
shape = SubResource("CapsuleShape2D_316au")

[node name="damageArea" type="Area2D" parent="CharacterBody2D3"]
collision_layer = 0
collision_mask = 16384

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D3/damageArea"]
shape = SubResource("CapsuleShape2D_ib5w4")

[node name="springArea2" type="Area2D" parent="CharacterBody2D3"]
collision_layer = 8192
collision_mask = 8192

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D3/springArea2"]
shape = SubResource("CapsuleShape2D_56sp4")

[node name="CharacterBody2D4" type="CharacterBody2D" parent="."]
physics_interpolation_mode = 1
position = Vector2(130, 200)
collision_layer = 2
script = ExtResource("13_ysa2l")

[node name="Sprite2D4" type="Sprite2D" parent="CharacterBody2D4"]
physics_interpolation_mode = 1
material = SubResource("CanvasItemMaterial_by6cd")
texture = ExtResource("3_jcc0i")
hframes = 21
script = ExtResource("2_0odp4")

[node name="AnimationPlayer4" type="AnimationPlayer" parent="CharacterBody2D4"]
root_node = NodePath("../Sprite2D4")
libraries = {
"": SubResource("AnimationLibrary_4c86s")
}
autoplay = "idle"
script = ExtResource("5_gk6m3")

[node name="4" type="Area2D" parent="CharacterBody2D4"]
collision_layer = 32768
collision_mask = 32768
script = ExtResource("4_2y4d7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D4/4"]
shape = SubResource("CapsuleShape2D_hoo6n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D4"]
shape = SubResource("CapsuleShape2D_24drl")

[node name="springArea3" type="Area2D" parent="CharacterBody2D4"]
collision_layer = 8192
collision_mask = 8192

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D4/springArea3"]
shape = SubResource("CapsuleShape2D_l4ncp")

[node name="damageArea" type="Area2D" parent="CharacterBody2D4"]
collision_layer = 0
collision_mask = 16384

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D4/damageArea"]
shape = SubResource("CapsuleShape2D_3hv8s")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
physics_interpolation_mode = 1
position = Vector2(170, 200)
collision_layer = 2
script = ExtResource("4_tgr73")

[node name="Sprite2D2" type="Sprite2D" parent="CharacterBody2D"]
physics_interpolation_mode = 1
material = SubResource("CanvasItemMaterial_by6cd")
texture = ExtResource("3_jcc0i")
hframes = 21
script = ExtResource("2_0odp4")

[node name="AnimationPlayer2" type="AnimationPlayer" parent="CharacterBody2D"]
root_node = NodePath("../Sprite2D2")
libraries = {
"": SubResource("AnimationLibrary_4c86s")
}
autoplay = "idle"
script = ExtResource("5_gk6m3")

[node name="2" type="Area2D" parent="CharacterBody2D"]
collision_layer = 32768
collision_mask = 32768
script = ExtResource("4_2y4d7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/2"]
shape = SubResource("CapsuleShape2D_xlkgu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("CapsuleShape2D_m7t5i")

[node name="springArea4" type="Area2D" parent="CharacterBody2D"]
collision_layer = 8192
collision_mask = 8192

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/springArea4"]
shape = SubResource("CapsuleShape2D_44bpf")

[node name="damageArea" type="Area2D" parent="CharacterBody2D"]
collision_layer = 0
collision_mask = 16384

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/damageArea"]
shape = SubResource("CapsuleShape2D_8ptc2")

[node name="BigSlime" type="CharacterBody2D" parent="."]
position = Vector2(79, 170)
collision_layer = 65538
script = ExtResource("7_v2y33")

[node name="StaticBody2D" type="StaticBody2D" parent="BigSlime"]
collision_layer = 65536
collision_mask = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BigSlime/StaticBody2D"]
shape = SubResource("RectangleShape2D_wy72w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BigSlime"]
shape = SubResource("RectangleShape2D_wy72w")

[node name="Sprite2D" type="Sprite2D" parent="BigSlime"]
scale = Vector2(0.29, 0.29)
texture = ExtResource("1_0lk6c")

[node name="SlimeInputDelay" type="Timer" parent="BigSlime"]
wait_time = 3.0
one_shot = true
script = ExtResource("8_jm5xw")

[node name="springArea5" type="Area2D" parent="BigSlime"]
collision_layer = 8192
collision_mask = 8192

[node name="CollisionShape2D" type="CollisionShape2D" parent="BigSlime/springArea5"]
shape = SubResource("RectangleShape2D_175ee")

[node name="damageArea" type="Area2D" parent="BigSlime"]
collision_layer = 0
collision_mask = 16384

[node name="CollisionShape2D" type="CollisionShape2D" parent="BigSlime/damageArea"]
shape = SubResource("RectangleShape2D_xfh7o")

[node name="SlimeMergeDelay" type="Timer" parent="."]
one_shot = true
autostart = true
script = ExtResource("10_ud7et")

[node name="MergingEngine" type="Node2D" parent="."]
position = Vector2(-88, 168)
script = ExtResource("14_p8mhi")

[node name="VIEWPORT_SIZE_TEMP" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(203, 235)
shape = SubResource("RectangleShape2D_budch")

[connection signal="detect1" from="CharacterBody2D2" to="MergingEngine" method="_on_character_body_2d_2_detect_1"]
[connection signal="mergecheck3" from="CharacterBody2D2" to="SlimeMergeDelay" method="_on_character_body_2d_2_mergecheck_3"]
[connection signal="animation_finished" from="CharacterBody2D2/AnimationPlayer" to="CharacterBody2D2/AnimationPlayer" method="_on_animation_finished"]
[connection signal="area_entered" from="CharacterBody2D2/1" to="CharacterBody2D2" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="CharacterBody2D2/1" to="CharacterBody2D2/1" method="_on_area_exited"]
[connection signal="body_entered" from="CharacterBody2D2/1" to="CharacterBody2D2" method="_on_area_2d_body_entered"]
[connection signal="onEnter" from="CharacterBody2D2/1" to="CharacterBody2D2" method="_on_area_2d_on_enter"]
[connection signal="rmdetect1" from="CharacterBody2D2/1" to="MergingEngine" method="_on_area_2d_rmdetect_1"]
[connection signal="area_entered" from="CharacterBody2D2/damageArea" to="CharacterBody2D2" method="_on_damage_area_area_entered"]
[connection signal="body_entered" from="CharacterBody2D2/damageArea" to="CharacterBody2D2" method="_on_damage_area_body_entered"]
[connection signal="body_entered" from="CharacterBody2D2/springArea" to="CharacterBody2D2" method="_on_spring_area_body_entered"]
[connection signal="detect3" from="CharacterBody2D3" to="MergingEngine" method="_on_character_body_2d_3_detect_3"]
[connection signal="rmdetect3" from="CharacterBody2D3" to="MergingEngine" method="_on_character_body_2d_3_rmdetect_3"]
[connection signal="animation_finished" from="CharacterBody2D3/AnimationPlayer3" to="CharacterBody2D3/AnimationPlayer3" method="_on_animation_finished"]
[connection signal="area_entered" from="CharacterBody2D3/3" to="CharacterBody2D3" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="CharacterBody2D3/3" to="CharacterBody2D3/3" method="_on_area_exited"]
[connection signal="body_entered" from="CharacterBody2D3/3" to="CharacterBody2D3" method="_on_area_2d_body_entered"]
[connection signal="onEnter" from="CharacterBody2D3/3" to="CharacterBody2D3" method="_on_area_2d_on_enter"]
[connection signal="rmdetect1" from="CharacterBody2D3/3" to="CharacterBody2D3" method="_on_area_2d_rmdetect_1"]
[connection signal="area_entered" from="CharacterBody2D3/damageArea" to="CharacterBody2D2" method="_on_damage_area_area_entered"]
[connection signal="body_entered" from="CharacterBody2D3/damageArea" to="CharacterBody2D3" method="_on_damage_area_body_entered"]
[connection signal="body_entered" from="CharacterBody2D3/springArea2" to="CharacterBody2D3" method="_on_spring_area_body_entered"]
[connection signal="detect4" from="CharacterBody2D4" to="MergingEngine" method="_on_character_body_2d_4_detect_4"]
[connection signal="rmdetect4" from="CharacterBody2D4" to="MergingEngine" method="_on_character_body_2d_4_rmdetect_4"]
[connection signal="animation_finished" from="CharacterBody2D4/AnimationPlayer4" to="CharacterBody2D4/AnimationPlayer4" method="_on_animation_finished"]
[connection signal="area_entered" from="CharacterBody2D4/4" to="CharacterBody2D4" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="CharacterBody2D4/4" to="CharacterBody2D4/4" method="_on_area_exited"]
[connection signal="body_entered" from="CharacterBody2D4/4" to="CharacterBody2D4" method="_on_area_2d_body_entered"]
[connection signal="onEnter" from="CharacterBody2D4/4" to="CharacterBody2D4" method="_on_area_2d_on_enter"]
[connection signal="rmdetect1" from="CharacterBody2D4/4" to="CharacterBody2D4" method="_on_area_2d_rmdetect_1"]
[connection signal="body_entered" from="CharacterBody2D4/springArea3" to="CharacterBody2D4" method="_on_spring_area_body_entered"]
[connection signal="area_entered" from="CharacterBody2D4/damageArea" to="CharacterBody2D2" method="_on_damage_area_area_entered"]
[connection signal="body_entered" from="CharacterBody2D4/damageArea" to="CharacterBody2D4" method="_on_damage_area_body_entered"]
[connection signal="detect2" from="CharacterBody2D" to="MergingEngine" method="_on_character_body_2d_detect_2"]
[connection signal="rmdetect2" from="CharacterBody2D" to="MergingEngine" method="_on_character_body_2d_rmdetect_2"]
[connection signal="animation_finished" from="CharacterBody2D/AnimationPlayer2" to="CharacterBody2D/AnimationPlayer2" method="_on_animation_finished"]
[connection signal="area_entered" from="CharacterBody2D/2" to="CharacterBody2D" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="CharacterBody2D/2" to="CharacterBody2D/2" method="_on_area_exited"]
[connection signal="body_entered" from="CharacterBody2D/2" to="CharacterBody2D" method="_on_area_2d_body_entered"]
[connection signal="onEnter" from="CharacterBody2D/2" to="CharacterBody2D" method="_on_area_2d_on_enter"]
[connection signal="rmdetect1" from="CharacterBody2D/2" to="CharacterBody2D" method="_on_area_2d_rmdetect_1"]
[connection signal="body_entered" from="CharacterBody2D/springArea4" to="CharacterBody2D" method="_on_spring_area_4_body_entered"]
[connection signal="area_entered" from="CharacterBody2D/damageArea" to="CharacterBody2D2" method="_on_damage_area_area_entered"]
[connection signal="body_entered" from="CharacterBody2D/damageArea" to="CharacterBody2D" method="_on_damage_area_body_entered"]
[connection signal="cooldownstart" from="BigSlime" to="SlimeMergeDelay" method="_on_big_slime_cooldownstart"]
[connection signal="delaystart" from="BigSlime" to="BigSlime/SlimeInputDelay" method="_on_big_slime_delaystart"]
[connection signal="hideslime" from="BigSlime" to="CharacterBody2D2" method="_on_big_slime_hideslime"]
[connection signal="hideslime" from="BigSlime" to="CharacterBody2D3" method="_on_big_slime_hideslime"]
[connection signal="hideslime" from="BigSlime" to="CharacterBody2D4" method="_on_big_slime_hideslime"]
[connection signal="hideslime" from="BigSlime" to="CharacterBody2D" method="_on_big_slime_hideslime"]
[connection signal="mergecheck" from="BigSlime" to="SlimeMergeDelay" method="_on_big_slime_mergecheck"]
[connection signal="timeout" from="BigSlime/SlimeInputDelay" to="BigSlime" method="_on_slime_input_delay_timeout"]
[connection signal="body_entered" from="BigSlime/springArea5" to="BigSlime" method="_on_spring_area_5_body_entered"]
[connection signal="allowmerge" from="SlimeMergeDelay" to="CharacterBody2D2" method="_on_slime_merge_delay_allowmerge"]
[connection signal="allowmerge" from="SlimeMergeDelay" to="BigSlime" method="_on_slime_merge_delay_allowmerge"]
[connection signal="stopmerge" from="SlimeMergeDelay" to="CharacterBody2D2" method="_on_slime_merge_delay_stopmerge"]
[connection signal="stopmerge" from="SlimeMergeDelay" to="BigSlime" method="_on_slime_merge_delay_stopmerge"]
[connection signal="timeout" from="SlimeMergeDelay" to="CharacterBody2D2" method="_on_slime_merge_delay_timeout"]
[connection signal="timeout" from="SlimeMergeDelay" to="SlimeMergeDelay" method="_on_timeout"]
[connection signal="sprite_comm" from="MergingEngine" to="CharacterBody2D2" method="_on_merging_engine_sprite_comm"]
[connection signal="sprite_comm" from="MergingEngine" to="CharacterBody2D3" method="_on_merging_engine_sprite_comm"]
[connection signal="sprite_comm" from="MergingEngine" to="CharacterBody2D4" method="_on_merging_engine_sprite_comm"]
[connection signal="sprite_comm" from="MergingEngine" to="CharacterBody2D" method="_on_merging_engine_sprite_comm"]
[connection signal="sprite_comm" from="MergingEngine" to="BigSlime" method="_on_merging_engine_sprite_comm"]
